out
In file included from src/db_getall.c:13:
includes/ft_db.h:62:2: error: unknown type name 't_stat'
        t_stat                          statinfo;
        ^
src/db_getall.c:26:23: error: unknown type name 't_arr'
int8_t          ft_ls_get_dir(t_arr *files, char *path)
                              ^
src/db_getall.c:28:2: error: use of undeclared identifier 't_dir'
        t_dir           *dp;
        ^
src/db_getall.c:28:10: error: use of undeclared identifier 'dp'
        t_dir           *dp;
                         ^
src/db_getall.c:34:22: error: implicit declaration of function 'RETURN' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        CHECK(dirp == NULL, RETURN(-1), "Open Dir Failed");
                            ^
src/db_getall.c:34:22: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'char *' [-Werror,-Wint-conversion]
        CHECK(dirp == NULL, RETURN(-1), "Open Dir Failed");
                            ^~~~~~~~~~
libft/includes/libft.h:32:47: note: expanded from macro 'CHECK'
# define CHECK(a,M,...) if(1){if(a){return(LP(M, ##__VA_ARGS__));}}
                                              ^
libft/includes/libft.h:31:51: note: expanded from macro 'LP'
# define LP(M,...) ft_log_err(__FILE__, __LINE__, M, ##__VA_ARGS__)
                                                  ^
libft/includes/libft.h:221:48: note: passing argument to parameter 'message' here
int                                     ft_log_err(char *file, int line, char *message, ...);
                                                                               ^
src/db_getall.c:35:10: error: use of undeclared identifier 'dp'
        while ((dp = readdir(dirp)) != 0)
                ^
src/db_getall.c:37:7: error: use of undeclared identifier 'dp'
                if (dp->d_name[0] == '.' && !(g_ls_flags & FLG_a))
                    ^
src/db_getall.c:37:33: error: use of undeclared identifier 'g_ls_flags'; did you mean 'lchflags'?
                if (dp->d_name[0] == '.' && !(g_ls_flags & FLG_a))
                                              ^~~~~~~~~~
                                              lchflags
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/sys/stat.h:377:5: note: 'lchflags' declared here
int     lchflags(const char *, __uint32_t) __OSX_AVAILABLE_STARTING(__MAC_10_5, __IPHONE_2_0);
        ^
src/db_getall.c:37:46: error: use of undeclared identifier 'FLG_a'
                if (dp->d_name[0] == '.' && !(g_ls_flags & FLG_a))
                                                           ^
src/db_getall.c:40:39: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'char *' [-Werror,-Wint-conversion]
                CHECK1(tmp == NULL, closedir(dirp), RETURN(-1), "Malloc Failed");
                                                    ^~~~~~~~~~
libft/includes/libft.h:33:52: note: expanded from macro 'CHECK1'
# define CHECK1(a,b,M,...) if(1){if(a){b;return(LP(M, ##__VA_ARGS__));}}
                                                   ^
libft/includes/libft.h:31:51: note: expanded from macro 'LP'
# define LP(M,...) ft_log_err(__FILE__, __LINE__, M, ##__VA_ARGS__)
                                                  ^
libft/includes/libft.h:221:48: note: passing argument to parameter 'message' here
int                                     ft_log_err(char *file, int line, char *message, ...);
                                                                               ^
src/db_getall.c:41:42: error: use of undeclared identifier 'dp'
                ft_asprintf(&tmp->path, "%s/%s", path, dp->d_name);
                                                       ^
src/db_getall.c:42:25: error: use of undeclared identifier 'dp'
                tmp->name = ft_strdup(dp->d_name);
                                      ^
src/db_getall.c:44:53: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'char *' [-Werror,-Wint-conversion]
                CHECK2(chk == -1, file_del(&tmp), closedir(dirp), RETURN(-1), "Lstat Failed");
                                                                  ^~~~~~~~~~
libft/includes/libft.h:34:56: note: expanded from macro 'CHECK2'
# define CHECK2(a,b,c,M,...) if(1){if(a){b;c;return(LP(M, ##__VA_ARGS__));}}
                                                       ^
libft/includes/libft.h:31:51: note: expanded from macro 'LP'
# define LP(M,...) ft_log_err(__FILE__, __LINE__, M, ##__VA_ARGS__)
                                                  ^
libft/includes/libft.h:221:48: note: passing argument to parameter 'message' here
int                                     ft_log_err(char *file, int line, char *message, ...);
                                                                               ^
src/db_getall.c:45:3: error: implicit declaration of function 'arr_push' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                arr_push(files, tmp);
                ^
src/db_getall.c:53:2: error: use of undeclared identifier 't_arr'
        t_arr           *files;
        ^
src/db_getall.c:53:10: error: use of undeclared identifier 'files'; did you mean 'fileno'?
        t_arr           *files;
                         ^~~~~
                         fileno
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/stdio.h:305:6: note: 'fileno' declared here
int      fileno(FILE *);
         ^
src/db_getall.c:58:2: error: use of undeclared identifier 'files'
        files = arr_create(sizeof(t_ls_file), 100);
        ^
src/db_getall.c:58:10: error: implicit declaration of function 'arr_create' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        files = arr_create(sizeof(t_ls_file), 100);
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [src/db_getall.o] Error 1
